[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-claude-code"
version = "1.0.0"
description = "Use Claude Code CLI with NVIDIA NIM"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "openai>=2.16.0",
    "loguru>=0.7.0",
]

[project.scripts]
my-claude-code = "server:main"
